# ghost_writer2

./: .gitignore  app.py  pyproject.toml
src/ghost_writer/: contracts.py
src/ghost_writer/planners/: __init__.py  bible_planner.py
